--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -183,3 +183,12 @@
     address = {Needham, MA, USA},
 }
 
+@software{repo,
+    author = {Costa Branco Marado Torres, João Augusto},
+    license = {AGPL-3.0-or-later},
+    month = oct,
+    title = {{SeUnem}},
+    url = {https://github.com/torres-engineer/SeUnem/},
+    version = {0.1.0},
+    year = {2025},
+}
